test-suite/bugs/bug_3556.v
Section S.
Require Hurkens. Import Hurkens.
End S.
Fail Check Generic.paradox.

Section S.
  Require Import Hurkens.
End S.
Fail Check Generic.paradox.
